# fastapi-todo-backend

./: .env.example  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1047d17cd6b1_create_users_and_todos.py
app/: main.py
app/core/: config.py  logging.py  security.py
app/db/: database.py  engine.py  init_db.py  session.py  tables.py
app/models/: todo.py  user.py
docker/: docker-compose.yml
